force-app/main/default/objects/User__c/fields/Issue_Category__c.field-meta.xml
<CustomField>
    <fullName>Issue_Category__c</fullName>
    <label>Issue Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Damage</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>