force-app/main/default/objects/User__c/fields/Merchandise__c.field-meta.xml
<CustomField>
    <fullName>Merchandise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchandise</label>
    <referenceTo>Merchandise__c</referenceTo>
    <relationshipLabel>User Cases</relationshipLabel>
    <relationshipName>User_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>