force-app/main/default/objects/User__c/validationRules/Damage_Requires_Priority.validationRule-meta.xml
<ValidationRule>
    <fullName>Damage_Requires_Priority</fullName>
    <active>true</active>
    <description>Ensures Damage requires to case is high.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Issue_Category__c, &quot;Damage&quot;),
  ISBLANK(TEXT(Priority__c))
)</errorConditionFormula>
    <errorDisplayField>Priority__c</errorDisplayField>
    <errorMessage>Priority is mandatory for Damage cases.</errorMessage>
</ValidationRule>