force-app/main/default/objects/User__c/validationRules/Warranty_Delivery_Requires_Priority.validationRule-meta.xml
<ValidationRule>
    <fullName>Warranty_Delivery_Requires_Priority</fullName>
    <active>true</active>
    <description>Ensures Damage requires to case is high.</description>
    <errorConditionFormula>AND(
  OR(
    ISPICKVAL(Issue_Category__c, &quot;Warranty&quot;),
    ISPICKVAL(Issue_Category__c, &quot;Delivery&quot;)
  ),
  ISBLANK(TEXT(Priority__c))
)</errorConditionFormula>
    <errorMessage>Priority is mandatory for Warranty and Delivery cases</errorMessage>
</ValidationRule>