force-app/main/default/objects/User__c/listViews/Damage_Support_Queue_User.listView-meta.xml
<ListView>
    <fullName>Damage_Support_Queue_User</fullName>
    <filterScope>Queue</filterScope>
    <label>Damage Support Queue</label>
    <queue>Damage_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>