force-app/main/default/objects/User__c/listViews/Warranty_Support_Queue_User.listView-meta.xml
<ListView>
    <fullName>Warranty_Support_Queue_User</fullName>
    <filterScope>Queue</filterScope>
    <label>Warranty Support Queue</label>
    <queue>Warranty_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>